# project-q

./: .gitignore  CHANGELOG.md  README.md  TODO.md  deploy-coordinator.sh  herald-deploy.sh  self-deploy-worker.sh  self-deploy.sh
herald/: herald_client.py
src/daemon/: CMakeLists.txt  artifacts.cpp  artifacts.h  config.cpp  config.h  coordinator.cpp  coordinator.h  main.cpp  project-qd-coordinator.service  project-qd@.service  protocol.cpp  protocol.h  queue_sync.cpp  queue_sync.h  taskrunner.cpp  taskrunner.h  worker.cpp  worker.h
